--- a/rs/qualifier/Cargo.toml
+++ b/rs/qualifier/Cargo.toml
@@ -24,3 +24,7 @@ itertools = { workspace = true }
 reqwest = { workspace = true }
 url = { workspace = true }
 ic-management-backend = { path = "../ic-management-backend" }
+backon = { workspace = true }
+chrono.workspace = true
+indexmap.workspace = true
+strum.workspace = true
