--- a/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics/Cargo.toml
+++ b/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics/Cargo.toml
@@ -25,3 +25,4 @@ ic-protobuf = { workspace = true }
 ic-nns-common = { workspace = true }
 dfn_core = { workspace = true }
 trustworthy-node-metrics-types = { workspace = true }
+serde = { workspace = true }
