--- a/rs/qualifier/Cargo.toml
+++ b/rs/qualifier/Cargo.toml
@@ -28,3 +28,4 @@ backon = { workspace = true }
 chrono.workspace = true
 indexmap.workspace = true
 strum.workspace = true
+futures.workspace = true
