using an action

--- a/.github/workflows/update-k8s-deployments/action.yaml
+++ b/.github/workflows/update-k8s-deployments/action.yaml
@@ -10,9 +10,9 @@ runs:
   using: composite
   steps:
     - name: "☸️ Update k8s deployments"
+      id: "update_k8s"
       env:
         GITHUB_API_TOKEN: ${{ inputs.github_api_token }}
-        GH_TOKEN: ${{ inputs.github_api_token }}
       shell: bash
       run: |
         set -eExou pipefail
@@ -21,15 +21,6 @@ runs:
         # .github/workflows/main.yaml
         echo "Should change following files:"
         echo $files
-
-        # Setup gh cli
-        (type -p wget >/dev/null || (sudo apt update && sudo apt-get install wget -y)) \
-        && sudo mkdir -p -m 755 /etc/apt/keyrings \
-        && wget -qO- https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo tee /etc/apt/keyrings/githubcli-archive-keyring.gpg > /dev/null \
-        && sudo chmod go+r /etc/apt/keyrings/githubcli-archive-keyring.gpg \
-        && echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null \
-        && sudo apt update \
-        && sudo apt install gh -y
 
         cd .git
 
@@ -62,4 +53,15 @@ runs:
           --force --set-upstream origin "${K8S_REPO_BRANCH}" || \
           git push --force --set-upstream origin "${K8S_REPO_BRANCH}"
 
-        gh pr create --assignee "@me" --base "main" --head "${K8S_REPO_BRANCH}" --title "[nomrbot] - Updating DRE container images" --body "Updating the DRE container images based on the latest changes in the DRE repository - [here](https://github.com/dfinity/dre/commits/$DRE_REPO_BRANCH)" --reviewer dfinity-ops/dre
+        echo "k8s_branch=${K8S_REPO_BRANCH}" >> $GITHUB_OUTPUT
+
+    - name: "🆕 Create a new Pull Request with the changes"
+      if: "${{ steps.update_k8s.k8s_branch != '' }}"
+      uses: peter-evans/create-pull-request@v6
+      with:
+        commit-message: "chore: Update dependencies"
+        branch: ${{ steps.update_k8s.k8s_branch }}
+        title: "[nomrbot] - Updating DRE container images"
+        body: "Updating the DRE container images based on the latest changes in the DRE repository - [here](https://github.com/dfinity/dre/commits/$DRE_REPO_BRANCH)"
+        token: ${{ inputs.github_api_token }}
+        path: .git/
