--- a/.github/workflows/update-k8s-deployments/action.yaml
+++ b/.github/workflows/update-k8s-deployments/action.yaml
@@ -54,6 +54,7 @@ runs:
           git push --force --set-upstream origin "${K8S_REPO_BRANCH}"
 
         echo "branch=${K8S_REPO_BRANCH}" >> $GITHUB_OUTPUT
+        cat $GITHUB_OUTPUT
 
     - name: "Test"
       run: echo ${{ steps.update_k8s.branch }}
