--- a/.github/workflows/update-k8s-deployments/action.yaml
+++ b/.github/workflows/update-k8s-deployments/action.yaml
@@ -54,14 +54,9 @@ runs:
           git push --force --set-upstream origin "${K8S_REPO_BRANCH}"
 
         echo "branch=${K8S_REPO_BRANCH}" >> $GITHUB_OUTPUT
-        cat $GITHUB_OUTPUT
-
-    - name: "Test"
-      run: echo ${{ steps.update_k8s.branch }}
-      shell: bash
 
     - name: "🆕 Create a new Pull Request with the changes"
-      if: "${{ steps.update_k8s.branch != '' }}"
+      if: "${{ steps.update_k8s.outputs.branch != '' }}"
       uses: peter-evans/create-pull-request@v6
       with:
         commit-message: "chore: Update dependencies"
