--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -128,7 +128,7 @@ jobs:
         if: ${{ github.ref == 'refs/heads/main' }}
         uses: ./.github/workflows/update-k8s-deployments
         with:
-          gitlab_api_token: ${{ secrets.GITLAB_K8S_API_TOKEN }}
+          github_api_token: ${{ secrets.K8S_API_TOKEN }}
 
       ########################################
       # Deploy to github pages
