--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.5.0"
 description = ""
 authors = ["DRE Team <dept-DRE@dfinity.org>"]
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = ">=3.10.0,<4"
