--- a/.github/workflows/qualify.yaml
+++ b/.github/workflows/qualify.yaml
@@ -56,4 +56,4 @@ jobs:
         run: |
           mkdir -p ~/.config/dfx/identity/xnet-testing/
           echo "${{ secrets.XNET_PRINCIPAL_KEY }}" > ~/.config/dfx/identity/xnet-testing/identity.pem
-          bazel run //rs/qualifier -- "${{ inputs.version }}" --mode parallel
+          bazel run //rs/qualifier -- "${{ inputs.version }}"
