--- a/.github/workflows/qualify.yaml
+++ b/.github/workflows/qualify.yaml
@@ -8,6 +8,7 @@ on:
         description: "The version that should be qualified"
         type: string
         default: ""
+
 # Run one qualification per commit.
 # This means we can have multiple qualifications of different versions
 # in parallel but only one qualification of each commit
@@ -16,14 +17,33 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  setup:
+    runs-on: 
+      labels: dre-runner-custom
+    container: ghcr.io/dfinity/dre/actions-runner:7efd87b0eac3ebd255be7efe00a3b39b0f9e9fc1
+    outputs:
+      matrix: ${{ steps.generate.outputs.output }}
+    steps:
+      - id: generate
+        shell: bash
+        run: |
+          sudo apt-get install -y jq
+          UNIQUE_VERSIONS=$(curl https://rollout-dashboard.ch1-rel1.dfinity.network/api/v1/rollouts | jq -r '.[] | select (.state != "failed") | select (.state != "complete") | .batches | to_entries[] | "\(.value)"' | jq '.subnets[].git_revision' |  sort | uniq | jq -s )
+          echo "Will qualify starting from versions: ${UNIQUE_VERSIONS}"
+          echo "output=$(jq -cn --argjson versions "$UNIQUE_VERSIONS" '{version: $versions}')" >> $GITHUB_OUTPUT
+
   qualify:
+    name: Qualifying ${{ matrix.version }} -> ${{ inputs.version }}
+    needs: setup
+    strategy:
+      matrix: ${{ fromJson(needs.setup.outputs.matrix) }}
     runs-on:
       labels: dre-runner-custom
     container: ghcr.io/dfinity/dre/actions-runner:7efd87b0eac3ebd255be7efe00a3b39b0f9e9fc1
     steps:
       - uses: actions/checkout@v4
         with:
-          repository: 'dfinity/dre' # this needs to be specified so it can be kicked off from the ic repo
+          repository: "dfinity/dre" # this needs to be specified so it can be kicked off from the ic repo
 
       - name: "🔍 Check if the version is set"
         shell: bash
@@ -49,4 +69,4 @@ jobs:
         run: |
           mkdir -p ~/.config/dfx/identity/xnet-testing/
           echo "${{ secrets.XNET_PRINCIPAL_KEY }}" > ~/.config/dfx/identity/xnet-testing/identity.pem
-          bazel run //rs/qualifier -- "${{ inputs.version }}"
+          bazel run //rs/qualifier -- "${{ inputs.version }}" --initial-versions ${{ matrix.version }}
