--- a/.github/workflows/qualify.yaml
+++ b/.github/workflows/qualify.yaml
@@ -77,7 +77,7 @@ jobs:
           echo "${{ secrets.XNET_PRINCIPAL_KEY }}" > ~/.config/dfx/identity/xnet-testing/identity.pem
           bazel run //rs/qualifier -- "${{ inputs.version }}" --initial-versions ${{ matrix.version }} --step-range 9..10
 
-      - name: "⚙️ Uploading artifacts during qualification"
+      - name: "⚙️ Uploading artifacts created during qualification"
         uses: actions/upload-artifact@v4
         with:
           name: ${{ inputs.version }}-${{ matrix.version }}
@@ -89,17 +89,17 @@ jobs:
     needs: qualify
     runs-on: ubuntu-22.04
     steps:
-      - name: "Download all artifacts"
-        uses: actions/download-artifact@v4
-        with:
-          path: artifacts
-          pattern: ${{ inputs.version }}-*
-
       - name: "Get current date"
         id: date
         shell: bash
         run: |
           echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+
+      - name: "Download all artifacts"
+        uses: actions/download-artifact@v4
+        with:
+          path: ${{ inputs.version }}-${{ steps.date.outputs.date }}
+          pattern: ${{ inputs.version }}-*
 
       - name: "Upload artifacts to google drive"
         uses: adityak74/google-drive-upload-git-action@v0.3
