feat(qualification): uploading of artifacts (#755)

--- a/.github/workflows/qualify.yaml
+++ b/.github/workflows/qualify.yaml
@@ -18,7 +18,7 @@ concurrency:
 
 jobs:
   setup:
-    runs-on: 
+    runs-on:
       labels: dre-runner-custom
     container: ghcr.io/dfinity/dre/actions-runner:7efd87b0eac3ebd255be7efe00a3b39b0f9e9fc1
     outputs:
@@ -70,3 +70,46 @@ jobs:
           mkdir -p ~/.config/dfx/identity/xnet-testing/
           echo "${{ secrets.XNET_PRINCIPAL_KEY }}" > ~/.config/dfx/identity/xnet-testing/identity.pem
           bazel run //rs/qualifier -- "${{ inputs.version }}" --initial-versions ${{ matrix.version }}
+
+      - name: "⚙️ Uploading artifacts created during qualification"
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: ${{ inputs.version }}-${{ matrix.version }}
+          path: /tmp/qualifier-artifacts/${{ inputs.version }}
+          retention-days: 1
+          overwrite: true
+
+  finish:
+    needs: qualify
+    runs-on: ubuntu-22.04
+    if: always()
+    steps:
+      - name: "Get current date"
+        id: date
+        shell: bash
+        run: |
+          echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+
+      - name: "Download all artifacts"
+        uses: actions/download-artifact@v4
+        with:
+          path: ${{ inputs.version }}-${{ steps.date.outputs.date }}
+          pattern: ${{ inputs.version }}-*
+
+      - name: "Printing what will be uploaded"
+        shell: bash
+        env:
+          ARTIFACTS_DIR: ${{ inputs.version }}-${{ steps.date.outputs.date }}
+        run: |
+          sudo apt-get install -y tree
+          tree $ARTIFACTS_DIR
+          tar -cvf "$ARTIFACTS_DIR.tar" $ARTIFACTS_DIR
+
+      - name: "Upload artifacts to google drive"
+        uses: adityak74/google-drive-upload-git-action@v0.3
+        with:
+          credentials: ${{ secrets.ARTIFACTS_DRIVE_CREDENTIALS }}
+          filename: ${{ inputs.version }}-${{ steps.date.outputs.date }}.tar
+          folderId: ${{ secrets.ARTIFACTS_DRIVE_FOLDER_ID }}
+          name: ${{ inputs.version }}-${{ steps.date.outputs.date }}.tar
