Add node providers mapping

--- a/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics/Cargo.toml
+++ b/rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics/Cargo.toml
@@ -25,3 +25,5 @@ ic-protobuf = { workspace = true }
 ic-nns-common = { workspace = true }
 dfn_core = { workspace = true }
 trustworthy-node-metrics-types = { workspace = true }
+ic-base-types = { workspace = true }
+ic-registry-keys = { workspace = true }
