--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -25,9 +25,9 @@ http_archive(
 )
 
 http_file(
-    name = "bazelisk_darwin",
-    sha256 = "9a4b169038a63ebf60a9b4f367b449ab9b484c4ec7d1ef9f6b7a4196dfd50f33",
-    url = "https://github.com/bazelbuild/bazelisk/releases/download/v1.20.0/bazelisk-darwin",
+    name = "target_determinator",
+    sha256 = "65000bba3a5eb1713d93b1e08e33b6fbe5787535664bbc1ba2f4166b0d26d0a1",
+    url = "https://github.com/bazel-contrib/target-determinator/releases/download/v0.27.0/target-determinator.linux.amd64",
 )
 
 http_file(
