--- a/release-controller/BUILD.bazel
+++ b/release-controller/BUILD.bazel
@@ -90,7 +90,7 @@ py_test(
 )
 
 py_test(
-    name = "pytest_large",
+    name = "pytest_enormous",
     srcs = ["pytest.py"],
     main = "pytest.py",
     data = long_tests + glob(["*.py"], exclude = ["test*.py"]) + [":bazelisk", ":target_determinator"],
@@ -98,7 +98,7 @@ py_test(
     tags = ["no-sandbox"],
     deps = deps + dev_deps,
     env_inherit = ["HOME"],
-    size = "large",
+    size = "enormous",
 )
 
 py_oci_image(
