--- a/.bazelrc
+++ b/.bazelrc
@@ -35,7 +35,7 @@ build --@rules_rust//:extra_rustc_flags=-Cdebug-assertions=on
 build --@rules_rust//:extra_rustc_flag=-Dbindings_with_variant_name
 build --strip=never
 
-# build:dfinity --remote_cache=bazel-remote.idx.dfinity.network
+build:dfinity --remote_cache=bazel-remote.idx.dfinity.network
 # build --remote_cache=grpc://localhost:9092
 build --remote_instance_name=default
 build --google_default_credentials=false
@@ -46,14 +46,14 @@ build --remote_timeout=30s # Default is 60s.
 build:ci --remote_timeout=5m # Default is 60s.
 build:ci --remote_upload_local_results=true
 
-# build:dfinity --experimental_remote_downloader=bazel-remote.idx.dfinity.network --experimental_remote_downloader_local_fallback
+build:dfinity --experimental_remote_downloader=bazel-remote.idx.dfinity.network --experimental_remote_downloader_local_fallback
 build:local --experimental_remote_downloader=
 
 # Does not produce valid JSON. See https://github.com/bazelbuild/bazel/issues/14209
 build --execution_log_json_file=bazel-build-log.json
 
-# build:dfinity --bes_results_url=https://dash.idx.dfinity.network/invocation/
-# build:dfinity --bes_backend=bes.idx.dfinity.network
+build:dfinity --bes_results_url=https://dash.idx.dfinity.network/invocation/
+build:dfinity --bes_backend=bes.idx.dfinity.network
 build --bes_timeout=30s # Default is no timeout.
 build:ci --bes_timeout=180s # Default is no timeout.
 build:ci --bes_upload_mode=fully_async
@@ -72,7 +72,7 @@ build:fmt --aspects=@rules_rust//rust:defs.bzl%rustfmt_aspect
 build:fmt --output_groups=+rustfmt_checks
 build --@rules_rust//:rustfmt.toml=//:rustfmt.toml
 
-test --test_output=errors
+test --test_output=streamed
 test --test_env=RUST_BACKTRACE=full
 
 test:precommit --build_tests_only
