chore(ci): Temporarily disable the automatic branch update

--- a/.github/workflows/pull-request-update.yaml
+++ b/.github/workflows/pull-request-update.yaml
@@ -2,7 +2,8 @@ name: Auto update PR's
 on:
   push:
     branches:
-      - main
+      - main-disabled  # change back to "main" to re-enable
+
 jobs:
   autoupdate:
     name: autoupdate
